# package-pypi-cicd

./: README.md  WORKLOG.md  pyproject.toml
.github/workflows/: publish.yml
src/example_package_jeff_creations/: example.py
tests/: test_simple.py
