[build-system]
requires = ["hatchling == 1.26.3"]
build-backend = "hatchling.build"

[project]
name = "example_package_jeff_creations"
version = "0.0.9"
authors = [
  { name="Jeff B" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files.globs = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/coolcreation/packaging_tutorial"
Issues = "https://github.com/coolcreation/packaging_tutorial/issues"